# RC-couches-telepresence

./: .gitignore  Makefile  README.md  pyproject.toml
ansible/: deploy.yml
ansible/roles/code/tasks/: main.yml
ansible/roles/code/vars/: main.yml
ansible/roles/svc/tasks/: main.yml
scripts/: killall  launchrctv  launchzoom
zoom-webhook/: webhook.py
zulip-bot/: bot.py  brainstorm.txt
zulip-bot/src/: bridge.py  client.py  constants.py  notifier.py  setup.py  status.py  utils.py  validator.py
